--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,6 @@ header{
     width: 100%;
     height: 250px;
     color: white;
-    
 }
 nav{
     background-color: rgb(44, 43, 43);
@@ -26,15 +25,19 @@ nav{
     border-bottom: 3px solid gray;
 }
 main{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(6,1fr);
     background-color: rgb(44, 43, 43);
     width: 100%;
-    height: 240rem;
+    height: 130rem;
     border-radius: 2rem;
     margin: 1rem;
     margin-top: 3rem;
     border: 2px solid gray;
 }
 footer{
+    text-decoration: none;
     background-color: rgb(97, 93, 93);
     width: 100%;
     border-radius: 2rem;
@@ -67,28 +70,84 @@ main p{
     font-size: 20px;
     color: white;
 }
-main img{
-    display: flex;
-    margin: auto;
-    margin-top: 4rem;
-    width: 60%;
-    margin-bottom: 4rem;
-}
-.wzz{
-    width: 50%;
-}
-.fnn{
-    width: 50%;
-}
-.gtvv{
-    width: 50%;
-    height: 8%;
-}
-.lfd2{
-    width: 50%;
-}
 footer p{
     color: white;
     text-align: center;
     font-size: 25px;
+}
+footer a{
+    text-decoration: none;
+    margin-left: 5rem;
+}
+.face{
+    color: blue;
+}
+.wpp{
+    color: rgb(0, 255, 0);
+}
+.git{
+    color: white;
+}
+.art1{
+    grid-column: 1/3;
+    font-size: 40px;
+    color: white;
+    margin-top: 4rem;
+    text-align: center;
+}
+.sect1{
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+    grid-column: 1/4;
+    margin-bottom: 8rem;
+    margin-top: 5rem;
+}
+.art2{
+    grid-column: 1/2;
+}
+.art3{
+    grid-column: 2/4;
+    color: white;
+    font-size: 19px;
+    padding: 1rem;
+    padding-left: 1.5rem;
+}
+section img{
+    height: 90%;
+    width: 100%;
+}
+.sect2{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-column: 1/4;
+    margin-bottom: 8rem;
+}
+.sect2 img{
+    width: 80%;
+    height: 80%;
+    margin-left: 8rem;
+}
+.art5{
+    color: white;
+}
+.sect3{
+    display: grid;
+    grid-template-columns:repeat(3,1fr);
+    grid-column: 1/4;
+    margin-bottom: 5rem;
+}
+.art6{
+    grid-column: 1/2;
+}
+.art7{
+    grid-column: 2/4;
+    color: white;
+    font-size: 19px;
+    padding: 1rem;
+    padding-left: 1.5rem;
+}
+section img{
+    height: 90%;
+    width: 100%;
 }
